--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -2,6 +2,15 @@
 
 <!-- Content Wrapper -->
 <div class="content-wrapper">
+  <!-- Content Header (Page header) -->
+  <section class="content-header">
+    <div class="container-fluid">
+      <div class="row mb-2">
+        <div class="col-sm-6">
+
+
+
+<div class="content-wrapper">
   <!-- Content Header -->
   <div class="content-header">
     <div class="container">
@@ -12,7 +21,7 @@
       </div>
     </div>
   </div>
-
+</div>
   <!-- Main content -->
   <div class="content">
     <div class="container-fluid">
