--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,17 +1,8 @@
 {% extends "base.html"%} {% block contain%} {% load static %}
 
-<div class="content-wrapper">
-  <!-- Content Header -->
-  <div class="content-header">
-    <div class="container">
-      <div class="row mb-2">
-        <div class="col-sm-6">
-          <!-- <h1 class="m-0">Home <small>Example 3.0</small></h1> -->
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<!-- Content Wrapper -->
+
+
   <!-- Main content -->
   <div class="content">
     <div class="container-fluid">
@@ -56,7 +47,6 @@
                         </div>
                       </div>
                       <div class="card-body">
-                        <!-- Table displaying teknisi data -->
                         <table class="table table-bordered table-striped">
                           <thead>
                             <tr>
