--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -69,7 +69,7 @@
                         <div class="mt-4">
                           <h6 class="card-title">Special title treatment</h6>
                           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexk9HOhKqNrs-ug2K5gIs9znovInjKI5YcZH9MNlq8P_2hw/viewform?usp=sf_link" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Go somewhere</a>
+                          <a href="#" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Go update</a>
                         </div>
                       </div>
                       <!-- /.card-body -->
