--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -67,10 +67,11 @@
                         </table>
 
                         <div class="mt-4">
-                          <h6 class="card-title">Special title treatment</h6>
-                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                          <a href="#" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Go update</a>
+                          <h6 class="card-title">Update Status NTE</h6>
+                          <p class="card-text">Klik tombol di bawah ini untuk memperbarui status NTE melalui Telegram.</p>
+                          <a href="https://t.me/whktz_bot" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Buka Telegram untuk Update</a>
                         </div>
+
                       </div>
                       <!-- /.card-body -->
                     </div>
