--- a/home/templates/pivot.html
+++ b/home/templates/pivot.html
@@ -59,8 +59,8 @@
               {% endfor %}
             </div>
             <div class="card-footer"">
-              <h6 class="card-title">Special title treatment</h6>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <h6 class="card-title">Real Time Update Stock</h6>
+              <p class="card-text">Klik Tombol. Request sesuai yg di input di App lensa</p>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexk9HOhKqNrs-ug2K5gIs9znovInjKI5YcZH9MNlq8P_2hw/viewform?usp=sf_link" class="btn btn-primary" target="_blank" rel="noopener noreferrer">REQUEST</a>
             </div>
           </div>
