--- a/home/templates/pivot.html
+++ b/home/templates/pivot.html
@@ -22,22 +22,6 @@
     <!-- /.container-fluid -->
   </section>
 
-  <!-- Tambahkan kode AdSense di sini -->
-  <section class="adsense">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5450667750708233"
-            crossorigin="anonymous"></script>
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-5450667750708233"
-         data-ad-slot="6319922459"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </section>
-  <!-- Akhir kode AdSense -->
-
   <!-- Main content -->
   <section class="content">
     <div class="container-fluid">
@@ -46,11 +30,130 @@
           <div class="card card-primary">
             <div class="card-header">
               <h3 class="card-title">Precon Ready!!</h3>
-              ...
+
+              <div class="card-tools">
+                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                  <i class="fas fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-tool" data-card-widget="remove">
+                  <i class="fas fa-times"></i>
+                </button>
+              </div>
             </div>
-            <!-- Lanjutkan dengan konten lainnya -->
+            <div class="card-body">
+              {% for item in stock_data %}
+                {% if "PRECON" in item.description and item.stock > 0 %}
+                  <div class="d-flex justify-content-between align-items-center">
+                    <h4 class="small font-weight-bold">{{ item.description }}</h4>
+                    <h4 class="small font-weight-bold text-right">{{ item.stock }} PCS</h4>
+                  </div>
+                  <div class="progress mb-4">
+                    <div class="progress-bar {% if item.stock < 20 %} bg-danger {% elif item.stock >= 20 and item.stock <= 50 %} bg-warning {% else %} bg-success {% endif %}"
+                         role="progressbar"
+                         style="width: {{ item.stock }}%"
+                         aria-valuenow="{{ item.stock }}"
+                         aria-valuemin="0"
+                         aria-valuemax="100"></div>
+                  </div>
+                {% endif %}
+              {% endfor %}
+            </div>
+            <div class="card-footer"">
+              <h6 class="card-title">Real Time Update Stock</h6>
+              <p class="card-text">Request sesuai yg di input di App lensa!! </p>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexk9HOhKqNrs-ug2K5gIs9znovInjKI5YcZH9MNlq8P_2hw/viewform?usp=sf_link" class="btn btn-primary" target="_blank" rel="noopener noreferrer">REQUEST</a>
+            </div>
           </div>
           <!-- /.card -->
+
+          <div class="card card-danger">
+            <div class="card-header">
+              <h3 class="card-title">STOCK NTE EBIS</h3>
+
+              <div class="card-tools">
+                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                  <i class="fas fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-tool" data-card-widget="remove">
+                  <i class="fas fa-times"></i>
+                </button>
+              </div>
+            </div>
+            <div class="card-body">
+              <table class="table table-bordered table-striped">
+                <thead>
+                  <tr>
+                    <th>NTE EBIS</th>
+                    <th class="text-center">NEW</th>
+                    <th class="text-center">REFURBISH</th>
+                    <th class="text-center">XGGN</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for item in data_stock_nte %}
+                  <tr>
+                    <td>{{ item.NTE_EBIS }}</td>
+                    <td class="text-center">{{ item.EBIS_NEW }}</td>
+                    <td class="text-center">{{ item.EBIS_REFURBISH }}</td>
+                    <td class="text-center">{{ item.EBIS_DISMANTLING }}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+              <div class="mt-4">
+                <h6 class="card-title">Special title treatment</h6>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexk9HOhKqNrs-ug2K5gIs9znovInjKI5YcZH9MNlq8P_2hw/viewform?usp=sf_link" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Go somewhere</a>
+              </div>
+            </div>
+            <!-- /.card-body -->
+          </div>
+          <!-- /.card -->
+
+          <div class="card card-info">
+            <div class="card-header">
+              <h3 class="card-title">STOCK NTE TSEL</h3>
+
+              <div class="card-tools">
+                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                  <i class="fas fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-tool" data-card-widget="remove">
+                  <i class="fas fa-times"></i>
+                </button>
+              </div>
+            </div>
+            <div class="card-body">
+              <table class="table table-bordered table-striped">
+                <thead>
+                  <tr>
+                    <th>NTE TSEL</th>
+                    <th class="text-center">NEW</th>
+                    <th class="text-center">REFURBISH</th>
+                    <th class="text-center">XGGN</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for item in data_stock_nte %}
+                  <tr>
+                    <td>{{ item.NTE_TSEL }}</td>
+                    <td class="text-center">{{ item.TSEL_NEW }}</td>
+                    <td class="text-center">{{ item.TSEL_REFURBISH }}</td>
+                    <td class="text-center">{{ item.TSEL_DISMANTLING }}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+              <div class="mt-4">
+                <h6 class="card-title">Special title treatment</h6>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexk9HOhKqNrs-ug2K5gIs9znovInjKI5YcZH9MNlq8P_2hw/viewform?usp=sf_link" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Go somewhere</a>
+              </div>
+            </div>
+            <!-- /.card-body -->
+          </div>
+          <!-- /.card -->
+
         </div>
         <!-- /.col (RIGHT) -->
       </div>
