--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,7 +1,21 @@
 {% extends "base.html"%} {% block contain%} {% load static %}
 
 <!-- Content Wrapper -->
-
+ <!-- Tambahkan kode AdSense di sini -->
+  <section class="adsense">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5450667750708233"
+            crossorigin="anonymous"></script>
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5450667750708233"
+         data-ad-slot="6319922459"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </section>
+  <!-- Akhir kode AdSense -->
 
   <!-- Main content -->
   <div class="content">
