--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -19,7 +19,7 @@
       <!-- Navbar -->
       <nav class="main-header navbar navbar-expand-md navbar-light navbar-dark">
         <div class="container">
-          <a href="{% url 'index' %}" class="navbar-brand">
+          <a href="{% url 'index' %}" class="navbar-brand mr-3">
             <img src="{% static 'AdminLTE-3.2.0/dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: 0.8" />
             <span class="brand-text font-weight-light">Warehouse_KTZ<sup>✨</sup></span>
           </a>
