--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -181,7 +181,7 @@
           <div class="container-fluid">
             <div class="row mb-2">
               <div class="col-sm-6">
-                <h1>Collapsed Sidebar</h1>
+                <h1>Data Intech</h1>
               </div>
               <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
