--- a/home/templates/pivot.html
+++ b/home/templates/pivot.html
@@ -110,7 +110,7 @@
               <div class="mt-4">
                 <h6 class="card-title">Special title treatment</h6>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexk9HOhKqNrs-ug2K5gIs9znovInjKI5YcZH9MNlq8P_2hw/viewform?usp=sf_link" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Go somewhere</a>
+<!--                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexk9HOhKqNrs-ug2K5gIs9znovInjKI5YcZH9MNlq8P_2hw/viewform?usp=sf_link" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Go somewhere</a> -->
               </div>
             </div>
             <!-- /.card-body -->
@@ -154,7 +154,7 @@
               <div class="mt-4">
                 <h6 class="card-title">Special title treatment</h6>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexk9HOhKqNrs-ug2K5gIs9znovInjKI5YcZH9MNlq8P_2hw/viewform?usp=sf_link" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Go somewhere</a>
+<!--                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexk9HOhKqNrs-ug2K5gIs9znovInjKI5YcZH9MNlq8P_2hw/viewform?usp=sf_link" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Go somewhere</a> -->
               </div>
             </div>
             <!-- /.card-body -->
