--- a/home/templates/pivot.html
+++ b/home/templates/pivot.html
@@ -29,7 +29,7 @@
         <div class="col-md-12">
           <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">Precon Ready!!</h3>
+              <h3 class="card-title">Matrial Ready!!</h3>
 
               <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse">
